# wittgenlab

./: .gitignore  README.md  pyproject.toml  setup_demo.py  test_basic_functionality.py
src/wittgenlab/: __init__.py
src/wittgenlab/analysis/: __init__.py
src/wittgenlab/benchmarks/: __init__.py  base.py  registry.py
src/wittgenlab/benchmarks/code/: __init__.py
src/wittgenlab/benchmarks/glue/: __init__.py
src/wittgenlab/benchmarks/knowledge/: __init__.py
src/wittgenlab/benchmarks/multilingual/: __init__.py
src/wittgenlab/benchmarks/safety/: __init__.py
src/wittgenlab/core/: __init__.py  config.py  evaluator.py  results.py  security.py
src/wittgenlab/human/: __init__.py
src/wittgenlab/judges/: __init__.py  base.py
src/wittgenlab/judges/scoring/: __init__.py  llm_judge.py
src/wittgenlab/metrics/: __init__.py  base.py  registry.py
src/wittgenlab/metrics/custom/: __init__.py
src/wittgenlab/metrics/ngram/: __init__.py  bleu.py  rouge.py
src/wittgenlab/metrics/perplexity/: __init__.py
src/wittgenlab/metrics/semantic/: __init__.py  bertscore.py
tests/: test_per_item_evaluation.py  test_security.py
