[tool.poetry]
name = "wittgenlab"
version = "0.1.0"
description = "A comprehensive evaluation framework for AI models"
authors = ["Robert-Gomez-AI <robertgomez.datascience@gmail.com>"]
readme = "README.md"
packages = [{include = "wittgenlab", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = ">=1.21.0"
torch = ">=1.9.0"
transformers = ">=4.20.0"
datasets = ">=2.0.0"
evaluate = ">=0.4.0"
sacrebleu = ">=2.0.0"
rouge-score = ">=0.1.2"
bert-score = ">=0.3.13"
nltk = ">=3.7"
pandas = ">=1.3.0"
matplotlib = ">=3.5.0"
seaborn = ">=0.11.0"
plotly = ">=5.0.0"
jinja2 = ">=3.0.0"
pyyaml = ">=6.0"
tqdm = ">=4.60.0"
requests = ">=2.25.0"
pydantic = ">=2.0.0"
langchain = ">=0.1.0"
langchain-openai = ">=0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
black = ">=22.0.0"
isort = ">=5.10.0"
flake8 = ">=5.0.0"
mypy = ">=0.991"

[tool.poetry.group.full.dependencies]
openai = ">=1.0.0"
anthropic = ">=0.7.0"
cohere = ">=4.0.0,<5.0.0"
google-cloud-aiplatform = ">=1.20.0"
sentence-transformers = ">=2.2.0"
spacy = ">=3.4.0"
jupyter = ">=1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
